<resources>
    <string name="app_name">TEXT</string>
    <string name="login">login</string>
    <string name="enter">enter</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="forget">forget</string>
    <string name="agpassword">adpassword</string>
    <string name="daka">daka</string>
    <string name="source">souce</string>
    <string name="money">money</string>
    <string name="plan">plan</string>
    <string name="work">work</string>
    <string name="back">back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="myplan">mypan</string>
    <string name="learnplan">learnplan</string>
    <string name="lifeplan">lifeplan</string>
    <string name="wrightplan">wrightplan</string>
    <string name="seeplan">seeplan</string>
    <string name="wrightbeiwangkl">wrightbeiwanglu</string>
    <string name="mybeiwanglu">mybeiwanglu</string>
    <string name="jizhang">jizhang</string>
    <string name="jname">jname</string>
    <string name="jdata">jdata</string>
    <string name="danjia">danjia</string>
    <string name="shuliang">shuliang</string>
    <string name="leibie">leibie</string>
    <string name="zhushi">zhushi</string>
    <string name="putzhushi">putzhushi</string>
    <string name="seezhangdan">seezhangdan</string>
    <string name="leib">lieb</string>
    <string name="jin">jin</string>
    <string name="chu">chu</string>
    <string name="shenghuofei">shf</string>
    <string name="last">last</string>
    <string name="changeshf">changesfc</string>
    <string name="shfshangxian">shangchuiassc</string>
    <string name="input">input</string>
    <string name="change">change</string>
    <string name="changename">changename</string>
    <string name="jihualeibie">jihualeibie</string>
    <string name="jiahuadetail">jihuadetail</string>
    <string name="beiwangludetail">beiwangludetail</string>
    <string name="food">food</string>
    <string name="cloth">cloth</string>
    <string name="learning">learning</string>
    <string name="shenghjuo">shenghuo</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="nodata">nodata</string>
    <string name="seebei">seebei</string>
    <string name="putbeiwang">putbeiwanglu</string>
    <string name="users">users</string>
    <string name="nicheng">nicheng</string>
    <string name="putin">putin</string>

    <string name="wu">wu</string>
    <string name="ddtime">ddtime</string>
    <string name="zhangdan">zhndan</string>
    <string name="jinchu">jinchu</string>
    <string name="fenleizhang">fengleizhang</string>
</resources>
