<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/m" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="158dp"
            android:layout_marginBottom="531dp"
            android:gravity="center"
            android:text="@string/myplan"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="420dp"
            android:text="@string/jiahuadetail"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="wrap_content"
            android:layout_height="185dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="51dp"
            android:layout_marginEnd="78dp"
            android:layout_marginBottom="262dp"
            android:layout_toEndOf="@+id/textView15"
            android:ems="10"
            android:hint="@string/putzhushi"
            android:inputType="text" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorPrimary"
            android:text="@string/seezhangdan" />

        <Button
            android:id="@+id/tijiao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="145dp"
            android:background="@color/colorPrimary"
            android:text="@string/input" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="220dp"
            android:text="@string/jihualeibie"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="209dp"
            android:layout_marginBottom="220dp"
            android:text="@string/learnplan"
            android:textColor="@android:color/background_light" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="68dp"
            android:layout_marginBottom="220dp"
            android:text="@string/lifeplan"
            android:textColor="@android:color/background_light" />

    </RelativeLayout>
</RelativeLayout>
