<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@mipmap/b"
tools:context=".jizhang">

<!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="159dp"
                android:gravity="center"
                android:text="@string/jizhang"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="49dp"
                android:text="@string/jname"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="89dp"
                android:text="@string/jdata"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="129dp"
                android:text="@string/danjia"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="169dp"
                android:text="@string/shuliang"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="209dp"
                android:text="@string/leibie"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="349dp"
                android:text="@string/zhushi"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="89dp"
                android:layout_marginEnd="180dp"
                android:text="@string/year"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="89dp"
                android:layout_marginEnd="100dp"
                android:text="@string/month"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="89dp"
                android:layout_marginEnd="20dp"
                android:text="@string/day"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/year2"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="200dp"
                android:ems="10"
                android:gravity="right"
                android:inputType="date" />

            <EditText
                android:id="@+id/month2"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="120dp"
                android:ems="10"
                android:gravity="right"
                android:inputType="date" />

            <EditText
                android:id="@+id/day2"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:gravity="right"
                android:inputType="date" />

            <EditText
                android:id="@+id/zname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="50dp"
                android:layout_toEndOf="@+id/textView10"
                android:ems="10"
                android:inputType="text" />

            <EditText
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="116dp"
                android:layout_marginEnd="50dp"
                android:layout_toEndOf="@+id/textView12"
                android:ems="10"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/shuliang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="156dp"
                android:layout_marginEnd="50dp"
                android:layout_toEndOf="@+id/textView13"
                android:ems="10"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/beizhu3"
                android:layout_width="197dp"
                android:layout_height="92dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="29dp"
                android:layout_marginTop="357dp"
                android:layout_marginEnd="116dp"
                android:layout_toEndOf="@+id/textView15"
                android:ems="10"
                android:hint="@string/putzhushi"
                android:inputType="text" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="553dp"
                android:layout_marginEnd="0dp"
                android:background="@color/colorPrimary"
                android:text="@string/seezhangdan" />

            <Button
                android:id="@+id/tijiao2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="515dp"
                android:layout_marginEnd="172dp"
                android:background="@color/colorPrimary"
                android:text="@string/input" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="470dp"
                android:text="@string/leib"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="470dp"
            android:layout_marginLeft="150dp"
            android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/plan2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <RadioButton
            android:id="@+id/jin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jin"
            android:textColor="@android:color/background_light" />

        <RadioButton
            android:id="@+id/chu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chu"
            android:textColor="@android:color/background_light" />
        </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="220dp"
            android:layout_marginLeft="150dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/plan3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food"
                    android:textColor="@android:color/background_light" />

                <RadioButton
                    android:id="@+id/cloth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cloth"
                    android:textColor="@android:color/background_light" />

                <RadioButton
                    android:id="@+id/learning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learning"
                    android:textColor="@android:color/background_light" />

                <RadioButton
                    android:id="@+id/shenghuo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shenghjuo"
                    android:textColor="@android:color/background_light" />
            </RadioGroup>
        </LinearLayout>


    </RelativeLayout>

</FrameLayout>