<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/m"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="159dp"
            android:layout_marginBottom="560dp"
            android:gravity="center"
            android:text="@string/mybeiwanglu"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="480dp"
            android:text="@string/jdata"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="180dp"
            android:layout_marginBottom="480dp"
            android:text="@string/year"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="480dp"
            android:text="@string/month"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="480dp"
            android:text="@string/day"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="420dp"
            android:text="@string/beiwangludetail"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/year"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="200dp"
            android:layout_marginBottom="480dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="date" />

        <EditText
            android:id="@+id/month"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="480dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="date" />

        <EditText
            android:id="@+id/day"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="480dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="date" />

        <EditText
            android:id="@+id/beizhu1"
            android:layout_width="168dp"
            android:layout_height="148dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="58dp"
            android:layout_marginBottom="301dp"
            android:layout_toEndOf="@+id/textView15"
            android:ems="10"
            android:hint="@string/putbeiwang"
            android:inputType="text"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/tijiao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="145dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/input" />

    </RelativeLayout>
    <Button
        android:id="@+id/back5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="onClick"
        android:text="@string/back"
        android:textSize="36sp"/>
</RelativeLayout>
